src/main/java/pt/isel/ngspipes/dsl_core/domain/antlr/PipesParser.java
package pt.isel.ngspipes.dsl_core.domain.antlr;// Generated from Pipes.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PipesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, ID=27, STRING=28, BOOLEAN=29, NUMBER=30, COMMENT=31, 
		WS=32;
	public static final int
		RULE_root = 0, RULE_valueDeclaration = 1, RULE_parameterDeclaration = 2, 
		RULE_parameterName = 3, RULE_parameterValue = 4, RULE_variableDeclaration = 5, 
		RULE_variableName = 6, RULE_variableValue = 7, RULE_repositories = 8, 
		RULE_repository = 9, RULE_toolRepository = 10, RULE_pipelineRepository = 11, 
		RULE_repositoryId = 12, RULE_locationProperty = 13, RULE_locationValue = 14, 
		RULE_configProperty = 15, RULE_config = 16, RULE_configName = 17, RULE_configValue = 18, 
		RULE_outputs = 19, RULE_output = 20, RULE_outputId = 21, RULE_outputValue = 22, 
		RULE_outputName = 23, RULE_steps = 24, RULE_step = 25, RULE_stepId = 26, 
		RULE_execProperty = 27, RULE_commandReference = 28, RULE_toolName = 29, 
		RULE_commandName = 30, RULE_pipelineReference = 31, RULE_pipelineName = 32, 
		RULE_executionContextProperty = 33, RULE_inputsProperty = 34, RULE_inputProperty = 35, 
		RULE_inputName = 36, RULE_inputValue = 37, RULE_chain = 38, RULE_spreadProperty = 39, 
		RULE_spreadStrategyProperty = 40, RULE_strategyValue = 41, RULE_combineStrategy = 42, 
		RULE_oneToOneStrategy = 43, RULE_oneToManyStrategy = 44, RULE_spreadInputsToSpreadProperty = 45, 
		RULE_value = 46, RULE_indirectValue = 47, RULE_directValue = 48, RULE_array = 49;
	public static final String[] ruleNames = {
		"root", "valueDeclaration", "parameterDeclaration", "parameterName", "parameterValue", 
		"variableDeclaration", "variableName", "variableValue", "repositories", 
		"repository", "toolRepository", "pipelineRepository", "repositoryId", 
		"locationProperty", "locationValue", "configProperty", "config", "configName", 
		"configValue", "outputs", "output", "outputId", "outputValue", "outputName", 
		"steps", "step", "stepId", "execProperty", "commandReference", "toolName", 
		"commandName", "pipelineReference", "pipelineName", "executionContextProperty", 
		"inputsProperty", "inputProperty", "inputName", "inputValue", "chain", 
		"spreadProperty", "spreadStrategyProperty", "strategyValue", "combineStrategy", 
		"oneToOneStrategy", "oneToManyStrategy", "spreadInputsToSpreadProperty", 
		"value", "indirectValue", "directValue", "array"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "'params.'", "'Repositories'", "'['", "']'", "'ToolRepository'", 
		"'{'", "'}'", "'PipelineRepository'", "'location'", "':'", "'config'", 
		"'Outputs'", "'Steps'", "'Step'", "'exec'", "'execution_context'", "'inputs'", 
		"'spread'", "'strategy'", "'one_to_one'", "'('", "','", "')'", "'one_to_many'", 
		"'inputs_to_spread'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "ID", "STRING", "BOOLEAN", "NUMBER", "COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pipes.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PipesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public RepositoriesContext repositories() {
			return getRuleContext(RepositoriesContext.class,0);
		}
		public OutputsContext outputs() {
			return getRuleContext(OutputsContext.class,0);
		}
		public StepsContext steps() {
			return getRuleContext(StepsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PipesParser.EOF, 0); }
		public List<ValueDeclarationContext> valueDeclaration() {
			return getRuleContexts(ValueDeclarationContext.class);
		}
		public ValueDeclarationContext valueDeclaration(int i) {
			return getRuleContext(ValueDeclarationContext.class,i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==ID) {
				{
				{
				setState(100);
				valueDeclaration();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			repositories();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==ID) {
				{
				{
				setState(107);
				valueDeclaration();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			outputs();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==ID) {
				{
				{
				setState(114);
				valueDeclaration();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			steps();
			setState(121);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueDeclarationContext extends ParserRuleContext {
		public ParameterDeclarationContext parameterDeclaration() {
			return getRuleContext(ParameterDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public ValueDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valueDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterValueDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitValueDeclaration(this);
		}
	}

	public final ValueDeclarationContext valueDeclaration() throws RecognitionException {
		ValueDeclarationContext _localctx = new ValueDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_valueDeclaration);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				parameterDeclaration();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				variableDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterDeclarationContext extends ParserRuleContext {
		public ParameterNameContext parameterName() {
			return getRuleContext(ParameterNameContext.class,0);
		}
		public ParameterValueContext parameterValue() {
			return getRuleContext(ParameterValueContext.class,0);
		}
		public ParameterDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterParameterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitParameterDeclaration(this);
		}
	}

	public final ParameterDeclarationContext parameterDeclaration() throws RecognitionException {
		ParameterDeclarationContext _localctx = new ParameterDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameterDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			parameterName();
			setState(128);
			match(T__0);
			setState(129);
			parameterValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PipesParser.ID, 0); }
		public ParameterNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterParameterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitParameterName(this);
		}
	}

	public final ParameterNameContext parameterName() throws RecognitionException {
		ParameterNameContext _localctx = new ParameterNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameterName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__1);
			setState(132);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterValueContext extends ParserRuleContext {
		public DirectValueContext directValue() {
			return getRuleContext(DirectValueContext.class,0);
		}
		public ParameterValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterParameterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitParameterValue(this);
		}
	}

	public final ParameterValueContext parameterValue() throws RecognitionException {
		ParameterValueContext _localctx = new ParameterValueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parameterValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			directValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public VariableValueContext variableValue() {
			return getRuleContext(VariableValueContext.class,0);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitVariableDeclaration(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			variableName();
			setState(137);
			match(T__0);
			setState(138);
			variableValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PipesParser.ID, 0); }
		public VariableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterVariableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitVariableName(this);
		}
	}

	public final VariableNameContext variableName() throws RecognitionException {
		VariableNameContext _localctx = new VariableNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableValueContext extends ParserRuleContext {
		public DirectValueContext directValue() {
			return getRuleContext(DirectValueContext.class,0);
		}
		public VariableValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterVariableValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitVariableValue(this);
		}
	}

	public final VariableValueContext variableValue() throws RecognitionException {
		VariableValueContext _localctx = new VariableValueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variableValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			directValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepositoriesContext extends ParserRuleContext {
		public List<RepositoryContext> repository() {
			return getRuleContexts(RepositoryContext.class);
		}
		public RepositoryContext repository(int i) {
			return getRuleContext(RepositoryContext.class,i);
		}
		public RepositoriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repositories; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterRepositories(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitRepositories(this);
		}
	}

	public final RepositoriesContext repositories() throws RecognitionException {
		RepositoriesContext _localctx = new RepositoriesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_repositories);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__2);
			setState(145);
			match(T__3);
			setState(146);
			repository();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5 || _la==T__8) {
				{
				{
				setState(147);
				repository();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(153);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepositoryContext extends ParserRuleContext {
		public ToolRepositoryContext toolRepository() {
			return getRuleContext(ToolRepositoryContext.class,0);
		}
		public PipelineRepositoryContext pipelineRepository() {
			return getRuleContext(PipelineRepositoryContext.class,0);
		}
		public RepositoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repository; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterRepository(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitRepository(this);
		}
	}

	public final RepositoryContext repository() throws RecognitionException {
		RepositoryContext _localctx = new RepositoryContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_repository);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				toolRepository();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				pipelineRepository();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ToolRepositoryContext extends ParserRuleContext {
		public RepositoryIdContext repositoryId() {
			return getRuleContext(RepositoryIdContext.class,0);
		}
		public LocationPropertyContext locationProperty() {
			return getRuleContext(LocationPropertyContext.class,0);
		}
		public ConfigPropertyContext configProperty() {
			return getRuleContext(ConfigPropertyContext.class,0);
		}
		public ToolRepositoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_toolRepository; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterToolRepository(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitToolRepository(this);
		}
	}

	public final ToolRepositoryContext toolRepository() throws RecognitionException {
		ToolRepositoryContext _localctx = new ToolRepositoryContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_toolRepository);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(T__5);
			setState(160);
			repositoryId();
			setState(161);
			match(T__6);
			setState(162);
			locationProperty();
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(163);
				configProperty();
				}
			}

			setState(166);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PipelineRepositoryContext extends ParserRuleContext {
		public RepositoryIdContext repositoryId() {
			return getRuleContext(RepositoryIdContext.class,0);
		}
		public LocationPropertyContext locationProperty() {
			return getRuleContext(LocationPropertyContext.class,0);
		}
		public ConfigPropertyContext configProperty() {
			return getRuleContext(ConfigPropertyContext.class,0);
		}
		public PipelineRepositoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipelineRepository; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterPipelineRepository(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitPipelineRepository(this);
		}
	}

	public final PipelineRepositoryContext pipelineRepository() throws RecognitionException {
		PipelineRepositoryContext _localctx = new PipelineRepositoryContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pipelineRepository);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(T__8);
			setState(169);
			repositoryId();
			setState(170);
			match(T__6);
			setState(171);
			locationProperty();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(172);
				configProperty();
				}
			}

			setState(175);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepositoryIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PipesParser.ID, 0); }
		public RepositoryIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repositoryId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterRepositoryId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitRepositoryId(this);
		}
	}

	public final RepositoryIdContext repositoryId() throws RecognitionException {
		RepositoryIdContext _localctx = new RepositoryIdContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_repositoryId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationPropertyContext extends ParserRuleContext {
		public LocationValueContext locationValue() {
			return getRuleContext(LocationValueContext.class,0);
		}
		public LocationPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locationProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterLocationProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitLocationProperty(this);
		}
	}

	public final LocationPropertyContext locationProperty() throws RecognitionException {
		LocationPropertyContext _localctx = new LocationPropertyContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_locationProperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(T__9);
			setState(180);
			match(T__10);
			setState(181);
			locationValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(PipesParser.STRING, 0); }
		public LocationValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_locationValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterLocationValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitLocationValue(this);
		}
	}

	public final LocationValueContext locationValue() throws RecognitionException {
		LocationValueContext _localctx = new LocationValueContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_locationValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigPropertyContext extends ParserRuleContext {
		public List<ConfigContext> config() {
			return getRuleContexts(ConfigContext.class);
		}
		public ConfigContext config(int i) {
			return getRuleContext(ConfigContext.class,i);
		}
		public ConfigPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterConfigProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitConfigProperty(this);
		}
	}

	public final ConfigPropertyContext configProperty() throws RecognitionException {
		ConfigPropertyContext _localctx = new ConfigPropertyContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_configProperty);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185);
			match(T__11);
			setState(186);
			match(T__10);
			setState(187);
			match(T__6);
			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(188);
				config();
				}
				}
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(194);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigContext extends ParserRuleContext {
		public ConfigNameContext configName() {
			return getRuleContext(ConfigNameContext.class,0);
		}
		public ConfigValueContext configValue() {
			return getRuleContext(ConfigValueContext.class,0);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitConfig(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_config);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			configName();
			setState(197);
			match(T__10);
			setState(198);
			configValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PipesParser.ID, 0); }
		public ConfigNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).enterConfigName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PipesListener) ((PipesListener)listener).exitConfigName(this);
		}
	}
